feat: added a connected badge to the web
